# ragd

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  README.md  config.json  inherits.json
docs/: README.md
docs/assets/: README.md
docs/assets/demos/: 01-quick-start.md  02-search-tour.md  03-chat-tour.md  README.md
docs/assets/img/: README.md
docs/assets/prompts/: README.md  getting-started-comic.md
docs/development/: README.md  ai-contributions.md
docs/development/decisions/: README.md
docs/development/features/: README.md
docs/development/implementation/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.5.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.5.md  v0.9.0.md  v0.9.1.md  v0.9.5.md  v0.9.6.md  v1.0.0.md
docs/development/lineage/: README.md  acknowledgements.md  feature-mapping.md  planning-prompt.md  ragged-analysis.md  state-of-the-art-rag.md
docs/development/milestones/: README.md  v0.1.0.md  v0.2.0.md  v0.2.5.md  v0.2.6-v0.2.9.md  v0.3.0.md  v0.3.2.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.6.5.md  v0.7.0.md  v0.7.5.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.5.md  v0.8.6.md  v0.8.7.md  v0.9.0.md  v0.9.1.md  v0.9.5.md  v0.9.6.md  v1.0.0.md  v1.0.5.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.8.0.md  v2.0.0.md  v2.5.0.md  v3.0.0.md  v3.5.0.md  v4.0.0.md  v5.0.0.md
docs/development/planning/: README.md  future-cloud-support.md  v0.2-interface-contracts.md
docs/development/process/: README.md  workflow.md
docs/development/research/: README.md  citation-systems.md  cli-best-practices.md  cli-documentation-standards.md  docling-integration-guide.md  nlp-library-integration.md  paddleocr-integration-guide.md  state-of-the-art-apple-silicon.md  state-of-the-art-automation-scripts.md  state-of-the-art-chunking.md  state-of-the-art-cli-modes.md  state-of-the-art-collections.md  state-of-the-art-configuration.md  state-of-the-art-data-schemas.md  state-of-the-art-deduplication.md  state-of-the-art-embeddings.md  state-of-the-art-evaluation.md  state-of-the-art-fine-tuning.md  state-of-the-art-html-processing.md  state-of-the-art-knowledge-graphs.md  state-of-the-art-local-rag.md  state-of-the-art-metadata.md  state-of-the-art-multi-modal.md  state-of-the-art-multi-model-rag.md  state-of-the-art-ner-indexing.md  state-of-the-art-ner.md  state-of-the-art-pdf-processing.md  state-of-the-art-personal-rag.md  state-of-the-art-pii-removal.md  state-of-the-art-privacy.md  state-of-the-art-quantisation.md  state-of-the-art-rag-landscape.md  state-of-the-art-rag.md  state-of-the-art-setup-ux.md  state-of-the-art-table-figure-extraction.md  state-of-the-art-tagging.md  state-of-the-art-topic-extraction.md  state-of-the-art-user-interfaces.md
docs/explanation/: README.md  agentic-rag.md  alternatives.md  chunking-strategies.md  contextual-retrieval.md  hybrid-search.md  model-purposes.md  what-is-rag.md
docs/guides/: README.md  customising-prompts.md  indexing-advanced.md  quick-start.md  recipes.md  troubleshooting.md
docs/guides/cli/: README.md  advanced.md  command-comparison.md  essentials.md  intermediate.md  reference.md
docs/reference/: README.md  cli-reference.md  config.example.yaml  configuration.md  data-schema.md  search-syntax.md  test-fixtures.md
docs/tutorials/: 01-getting-started.md  02-searching.md  03-chat-interface.md  04-organisation.md  05-advanced-search.md  06-automation.md  07-troubleshooting-index.md  08-customising-prompts.md  README.md  backing-up-data.md  chat-with-search.md  chatting-with-your-knowledge.md  getting-started.md  organising-knowledge-base.md  powerful-searching.md  processing-difficult-pdfs.md
docs/use-cases/: README.md  code-documentation.md  ebook-library.md  financial-records.md  meeting-notes.md  personal-notes.md  recipe-collection.md  research-papers.md  technical-manuals.md  traceability.md
docs/use-cases/briefs/: README.md  UC-001-index-documents.md  UC-002-search-knowledge.md  UC-003-view-system-status.md  UC-004-process-messy-pdfs.md  UC-005-manage-metadata.md  UC-006-export-backup.md
scripts/: check-version-sync.py  measure_startup.py
src/ragd/: __init__.py  __main__.py  cli.py  config.py  config_validator.py  errors.py  features.py  hardware.py
src/ragd/archive/: __init__.py  export.py  format.py  import_.py
src/ragd/benchmark/: __init__.py  runner.py
src/ragd/chat/: __init__.py  agentic.py  context.py  history.py  message.py  prompts.py  reference_resolver.py  session.py
src/ragd/citation/: __init__.py  citation.py  extractor.py  formatter.py  validator.py
src/ragd/embedding/: __init__.py  embedder.py  late_chunking.py
src/ragd/llm/: client.py  (+6 more)
tests/: __init__.py  manual_v025_tests.py  manual_v02_tests.py  manual_v105_tests.py  test_agentic.py  test_archive.py  test_audit.py  test_captions.py  test_chat.py  test_chunker.py  test_citation.py  test_citation_validation.py  test_cli.py  test_cli_feedback.py  test_comparator.py  test_config.py  test_config_tools.py  test_contextual.py  test_dry_run.py  test_embedding.py  test_error_logging.py  test_errors.py  test_evaluation.py  test_extractor.py  test_hardware.py  test_health.py  test_html_metadata.py  test_html_parser.py  test_html_structure.py  test_hybrid_search.py  test_image_storage.py  test_ingestion_enhanced.py  test_installation_mode.py  test_integration_v031.py  test_js_html.py  test_late_chunking.py  test_llm_metadata.py  test_memory.py  test_metadata_extractor.py  test_metadata_store.py  (+26 more)
tests/benchmarks/: __init__.py  retrieval_quality.py  test_benchmarks.py
tests/fixtures/: README.md  sources.yaml  validator.py
tests/knowledge/: test_entities.py  test_graph.py
tests/metadata/: test_collections.py  test_library.py  test_provenance.py  test_suggestions.py
tests/privacy/: test_pii.py
tests/search/: test_decompose.py  test_rerank.py
tests/security/: test_crypto.py  test_deletion.py  test_encrypted_store.py  test_keystore.py  test_session.py  test_tiers.py
(+423 files in other folders)
