[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragd"
version = "0.6.5"
description = "Local RAG for personal knowledge management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "REPPL"}
]
keywords = ["rag", "retrieval", "augmented", "generation", "knowledge", "management"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    # CLI Framework
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Security: Fix known vulnerabilities
    "urllib3>=2.5.0",  # CVE fixes

    # Vector Database
    "chromadb>=0.4.0",

    # Embeddings
    "sentence-transformers>=2.2.0",

    # PDF Processing
    "pymupdf>=1.23.0",

    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",

    # Text Processing
    "nltk>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "pyparsing>=3.0.0",  # Boolean query parsing

    # Interactive TUI
    "textual>=0.40.0",

    # System utilities
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# v0.2 Feature Extras
pdf = [
    # Advanced PDF processing with layout/table detection
    "docling>=2.0.0",
    "docling-core>=2.0.0",
]
ocr = [
    # OCR for scanned documents (primary + fallback)
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "easyocr>=1.7.0",
    "opencv-python-headless>=4.8.0",
]
metadata = [
    # Metadata extraction (keywords, entities, language)
    "keybert>=0.8.0",
    "spacy>=3.7.0",
    "langdetect>=1.0.9",
]
export = [
    # Export functionality (Parquet for embeddings)
    "pyarrow>=14.0.0",
]
watch = [
    # Folder watching (F-037)
    "watchdog>=3.0.0",
]
web = [
    # Web archive support (F-038)
    "trafilatura>=1.6.0",
    "selectolax>=0.3.0",
]

# v0.6 Feature Extras
faiss = [
    # FAISS vector store backend (F-021)
    "faiss-cpu>=1.7.4",
]

# Meta-extra for all v0.2 features
v02 = [
    # PDF (docling)
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    # OCR
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "easyocr>=1.7.0",
    "opencv-python-headless>=4.8.0",
    # Metadata
    "keybert>=0.8.0",
    "spacy>=3.7.0",
    "langdetect>=1.0.9",
    # Export
    "pyarrow>=14.0.0",
    # Watch
    "watchdog>=3.0.0",
    # Web
    "trafilatura>=1.6.0",
    "selectolax>=0.3.0",
]

# Development Extras
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
security = [
    "pip-audit>=2.6.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
# Everything (v0.2 features + all dev tools)
all = [
    # v0.2 features
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "easyocr>=1.7.0",
    "opencv-python-headless>=4.8.0",
    "keybert>=0.8.0",
    "spacy>=3.7.0",
    "langdetect>=1.0.9",
    "pyarrow>=14.0.0",
    "watchdog>=3.0.0",
    "trafilatura>=1.6.0",
    "selectolax>=0.3.0",
    # Dev tools
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pip-audit>=2.6.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[project.scripts]
ragd = "ragd.cli:app"

[project.urls]
Homepage = "https://github.com/REPPL/ragd"
Documentation = "https://github.com/REPPL/ragd/tree/main/docs"
Repository = "https://github.com/REPPL/ragd"
Issues = "https://github.com/REPPL/ragd/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["ragd"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
